https://bugs.webkit.org/show_bug.cgi?id=43841 SegmentedVector::operator== typo

Reviewed by Sam Weinig.

* wtf/SegmentedVector.h:
(WTF::SegmentedVectorIterator::operator==):
(WTF::SegmentedVectorIterator::operator!=):



Canonical link: https://commits.webkit.org/78245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88892 268f45cc-cd09-0410-ab3c-d52691b4dbfc